2006-01-17  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

PR libgfortran/25631
	* io/transfer.c (formatted_transfer_scalar): Adjust pending_spaces and
	skips so that TL works correctly when no bytes_used yet.  


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@109858 138bc75d-0d04-0410-961f-82ee72b054a4